# DevSecOps_first_lab

./: pyproject.toml  railway.json
.github/workflows/: main.yml
src/: app.py
src/.github/workflows/: tests.yml
src/static/js/: cactus.js
src/templates/: index.html
tests/: test_app.py
