[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab_1"
version = "0.1.0"
description = "First lab"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.0",
    "gunicorn==25.1.0",
    "pymysql==1.1.0",
]
[project.optional-dependencies]
test = [
        "pytest==9.0.2",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
